# gemini-imagegen

./: .env.example  .gitignore  EnvSettings.py  JSONHelper.py  README.md  SamplePrompts.py  imagegen.py  main.py  prompts.json  pyproject.toml  textgen.py  videogen.py
_output/: tx_20251110_171434.txt  tx_20251110_181640.txt
